src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>First_Volunteer_Date__c</fullName>
        <inlineHelpText>The first Volunteer Hours Start Date</inlineHelpText>
        <label>First Volunteer Date</label>
        <summarizedField>Volunteer_Hours__c.Start_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Volunteer_Hours__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Volunteer_Hours__c.Contact__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Volunteer_Date__c</fullName>
        <inlineHelpText>The latest Volunteer Hours End Date</inlineHelpText>
        <label>Last Volunteer Date</label>
        <summarizedField>Volunteer_Hours__c.End_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Volunteer_Hours__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Volunteer_Hours__c.Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <label>Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Unique_Volunteer_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volunteer Unique Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volunteer_Auto_Reminder_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this Contact does not want to receive automatic reminder emails about their upcoming shifts.  Used in the &quot;Volunteer Hours Reminder Email&quot; workflow rule.</inlineHelpText>
        <label>Volunteer Auto-Reminder Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer_Availability__c</fullName>
        <label>Volunteer Availability</label>
        <picklist>
            <picklistValues>
                <fullName>Weekdays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Volunteer_Hours__c</fullName>
        <inlineHelpText>Total number of Hours that are Completed. Hours with other status values are not included.</inlineHelpText>
        <label>Volunteer Hours</label>
        <summarizedField>Volunteer_Hours__c.Hours_Worked__c</summarizedField>
        <summaryFilterItems>
            <field>Volunteer_Hours__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Volunteer_Hours__c.Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Volunteer_Last_Web_Signup_Date__c</fullName>
        <inlineHelpText>The date of the most recent volunteer signup from the web.  Used to trigger workflow for notifications and thank you emails.</inlineHelpText>
        <label>Volunteer Last Web Signup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Volunteer_Manager_Notes__c</fullName>
        <inlineHelpText>Notes about the volunteer that the volunteer manager or organization staff want to record.</inlineHelpText>
        <label>Volunteer Manager Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Volunteer_Notes__c</fullName>
        <inlineHelpText>Notes from the volunteer.  Note that the web signup form appends the volunteers comments to this field.</inlineHelpText>
        <label>Volunteer Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Volunteer_Organization__c</fullName>
        <inlineHelpText>The organization, company, or group the contact is volunteering on behalf of.</inlineHelpText>
        <label>Volunteer Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Skills__c</fullName>
        <inlineHelpText>Select the skill(s) this contact has that should be used to find volunteer jobs.</inlineHelpText>
        <label>Volunteer Skills</label>
        <picklist>
            <picklistValues>
                <fullName>Computer usage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundraising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landscaping</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Volunteer_Status__c</fullName>
        <label>Volunteer Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Sign Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospective</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
</CustomObject>